[package]
name = "railyard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16", features = ["full"] }
etcd-client = "0.8"

anyhow = "1.0"
quote = "1.0"
async-trait = "0.1"
url = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"

rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "0.8", features = ["serde", "v4"] }

futures-core = "0.3"
futures-util = "0.3"
deadqueue = "0.2"


etcdmq = { path = "../etcdmq" }
boxcar_rpc = "0.1"
